--- a/app/views/spree/admin/reports/order_cycles.html.haml
+++ b/app/views/spree/admin/reports/order_cycles.html.haml
@@ -15,7 +15,7 @@
   = f.collection_select(:distributor_id_eq, @distributors, :id, :name, :include_blank => @include_blank)
   %br
   = label_tag nil, "Report Type: "
-  = select_tag(:report_type, options_for_select([['Order Cycle Supplier Totals',:order_cycle_supplier_totals], ['Order Cycle Supplier Totals by Distributor',:order_cycle_supplier_totals_by_distributor], ['Order Cycle Distributor Totals by Supplier',:order_cycle_distributor_totals_by_supplier], ['Order Cycle Customer Totals',:order_cycle_customer_totals]], @report_type))
+  = select_tag(:report_type, options_for_select([['Order Cycle Supplier Totals',:order_cycle_supplier_totals], ['Order Cycle Supplier Totals by Distributor',:order_cycle_supplier_totals_by_distributor], ['Order Cycle Distributor Totals by Supplier',:order_cycle_distributor_totals_by_supplier], ['Order Cycle Customer Totals',:order_cycle_customer_totals], ['Order Cycle Customer Payments',:order_cycle_customer_payments]], @report_type))
   %br
   %br
   = check_box_tag :csv
