--- a/app/views/spree/orders/_empty_cart_form.html.haml
+++ b/app/views/spree/orders/_empty_cart_form.html.haml
@@ -1,6 +1,6 @@
 #empty-cart{'data-hook' => ""}
   = form_tag empty_cart_path, :method => :put do
     %p#clear_cart_link{'data-hook' => ""}
-      = link_to t(:continue_shopping), products_path, :class => 'continue button'
-      = t(:or)
-      = submit_tag t(:empty_cart), :class => 'button'
+      = link_to Spree.t(:continue_shopping), products_path, :class => 'continue button'
+      = Spree.t(:or)
+      = submit_tag Spree.t(:empty_cart), :class => 'button'
