--- a/app/views/admin/enterprises/index.html.erb
+++ b/app/views/admin/enterprises/index.html.erb
@@ -35,7 +35,7 @@
         </tr>
       <% end %>
       <% if @enterprises.empty? %>
-        <tr><td colspan="4"><%= t(:none) %></td></tr>
+        <tr><td colspan="4"><%= Spree.t(:none) %></td></tr>
       <% end %>
     </tbody>
   </table>
