--- a/app/views/spree/shared/_order_details_steps_data.html.erb
+++ b/app/views/spree/shared/_order_details_steps_data.html.erb
@@ -13,7 +13,7 @@
 	</div>
 
     <div class="columns alpha six">
-      <h6><%= t(:billing_address) %> <%= link_to "(#{t(:edit)})", checkout_state_path(:address) unless @order.completed? %></h6>
+      <h6><%= Spree.t(:billing_address) %> <%= link_to "(#{t(:edit)})", checkout_state_path(:address) unless @order.completed? %></h6>
       <div class="address">
         Distributor: <%= order.distributor.name %><br />
 		Address: <%= order.distributor.address.address1 + ", " + order.distributor.address.city %>
@@ -26,7 +26,7 @@
 <div class="row steps-data">
 	
   <div class="columns alpha six">
-    <h6><%= t(:payment_information) %> <%= link_to "(#{t(:edit)})", checkout_state_path(:payment) unless @order.completed? %></h6>
+    <h6><%= Spree.t(:payment_information) %> <%= link_to "(#{t(:edit)})", checkout_state_path(:payment) unless @order.completed? %></h6>
     <div class="payment-info">
 	  <% if order.payments.any? { |payment| payment.payment_method.name.include? "PayPal" } %>
 	    <div class="flash notice">Your payment via PayPal has been processed successfully.</div>
